# dqr

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: dqr.rs  qrtest.rs  rqr.rs  sqr.rs
src/: decode.rs  error.rs  identify.rs  lib.rs  quirc.rs  version_db.rs
tests/: quircs.rs
