[package]
name = "sqr"
version = "0.11.0"
edition = "2021"
authors = ["dignifiedquire <me@dignifiedquire.com>", "github.com/pepa65"]
description = "Scan QR with Quircs"
repository = "https://github.com/pepa65/rqr"
keywords = ["qr", "scanner", "decode", "cli"]
documentation = "https://docs.rs/quircs/"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.11"
thiserror = "2.0.11"

[dev-dependencies]
image = "0.25.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
