[package]
name = "sqr"
version = "0.12.3"
edition = "2021"
authors = ["dignifiedquire <me@dignifiedquire.com>", "github.com/pepa65"]
description = "Scan QR with Quircs"
repository = "https://github.com/pepa65/rqr"
documentation = "https://docs.rs/sqr/"
readme = "README.md"
license = "MIT"
keywords = ["qr", "scanner", "decode", "cli"]
categories = ["command-line-utilities", "computer-vision"]

[[bin]]
name = "sqr"
path = "examples/sqr.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.11"
thiserror = "2.0.11"
image = "0.25.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
