[package]
name = "dqr"
version = "0.14.33"
edition = "2024"
authors = ["dignifiedquire <me@dignifiedquire.com>", "github.com/pepa65"]
description = "Decode QR with Quircs"
repository = "https://github.com/pepa65/dqr"
documentation = "https://docs.rs/dqr/"
readme = "README.md"
license = "MIT"
keywords = ["qr", "decode", "cli"]
categories = ["command-line-utilities", "computer-vision"]
autoexamples = false

[[bin]]
name = "dqr"
path = "examples/dqr.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.11"
thiserror = "2.0.11"
image = "0.25.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
